# project-conpanio

./: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml  requirements.txt
src/: data.py  formatter.py  main.py  nav.py  ui.py
src/book/: AddressBook.py  Fields.py  Record.py  __init__.py
src/handlers/: __init__.py  contact_finder.py  handle_add.py  handle_add_note.py  handle_all.py  handle_birthdays.py  handle_change.py  handle_delete.py  handle_edit_note.py  handle_find.py  handle_find_notes.py  handle_find_phonenumber.py  handle_find_tag.py  handle_hello.py  handle_help.py  handle_tags.py  search_utils.py  yes_no_prompt.py  yes_no_promt_file.py
