[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memomate"
version = "0.1.0"
description = "A console assistant bot for managing contacts."
requires-python = ">=3.8"
dependencies = [
    "colorama>=0.4.6"
]

[project.scripts]
memomate = "main:main"
